tests/failing/2-comptime-format-trailing/main.af
fmt: /std/fmt

main: () {
    fmt.new(
        "trailing %",
        @compile_error("trailing format placeholder", @exit(1)),
        fmt.end, @write(ok: @exit(0))
    )
}
